auth, database connected

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-mongodb+srv://Jishnu:canon1300d@zomato-master.tydj2.mongodb.net/zomato?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://Jishnu:canon1300d@zomato-master.tydj2.mongodb.net/zomato?retryWrites=true&w=majority
